--- a/package.json
+++ b/package.json
@@ -8,8 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "element-ui": "^2.15.6",
+    "sass": "^1.32.0",
+    "sass-loader": "^10.0.0",
+    "ui-picture-bd-marker": "^2.3.7",
+    "vue": "^2.6.11",
+    "vue-picture-bd-marker": "^1.4.0",
+    "vue-router": "^3.5.3",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -18,6 +26,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "ui-picture-bd-marker": "^2.3.7",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
